--- a/abstract.tex
+++ b/abstract.tex
@@ -17,14 +17,18 @@
   of the relative performance of these policies is lacking.
   A challenge in Approximate Dynamic Programming is to better understand
   such trade-offs, to which this article contributes.
-  We simulate the performance of a family of algorithms on a
-  one-product system with particular parameters.
+  We simulate the performance of two algorithms on a
+  one-product system.
   It turns out that, for more than \emph{half of the realisations},
   the popular, but approximate, Certainty
   Equivalent Control policy
-  yields larger profits than an optimal, expected value maximising policy.
-  However, this approximate algorithm is less robust to model misspecification, and thus
-  requires that the retailer spends more resources on state estimation.
+  yields larger profits than an optimal, expected value maximising
+  policy.
+  However, this approximate algorithm performs significantly worse in
+  the remaining realisations, implying a more risk-seeking attitude by the
+  retailer.
+  % However, this approximate algorithm is less robust to model misspecification, and thus
+  % requires that the retailer spends more resources on state estimation.
 }
 \end{document}
 
