--- a/conclusion.tex
+++ b/conclusion.tex
@@ -7,7 +7,7 @@
 \section{Conclusion}\label{sec:conclusion}
 In this article we have looked at a mathematical formulation of a
 retail pricing problem for profit maximisation, and have investigated the
-performance of different algorithms that balance practicality
+performance of two algorithms that balance practicality
 with degree of suboptimality. The motivation is to better understand
 how well the suboptimal policies approximate the returns from the
 optimal policy.
@@ -17,7 +17,8 @@ distributions of the profits.
 So even though the expected value of suboptimal policies are no better
 than the optimal policy, they may have a higher profit for some
 realisations of the underlying probability distribution.
-We found in \Cref{sec:cec_comparison_example} that there are
+We found in \Cref{sec:suboptimal_approximations} that there are a
+large number of
 reasonable system parameters for which
 the suboptimal Certainty Equivalent Control policy resulted in a higher profit
 than the optimal policy in more than half of the realisations.
