--- a/introduction.tex
+++ b/introduction.tex
@@ -72,9 +72,9 @@ Much of the focus in the research community has therefore been on
 developing tractable algorithms with comparable performance to the
 optimal policies, see for example
 \citet{powell2011approximate} or \citet{bertsekas2012dynamic}.
-One can either create explicit policy functions \emph{offline}, at the
+One can either create explicit policy functions off-line, at the
 start of the decision process, or implicitly through an automated
-search for the best policy \emph{online} for each decision point.
+search for the best policy on-line for each decision point.
 An advantage of the pre-calculated, explicit policy functions
 is the speed at which we can make our decisions in the
 future. In the classic pricing problems, the dynamics of the
