--- a/main.tex
+++ b/main.tex
@@ -56,24 +56,14 @@
 optimal control,
 approximate dynamic programming.
 
-\section{Feedback from Sam Cohen}
-Key points he had issues with:
-\begin{itemize}
-\item My Figure caption of ``better 50\%'' of the time sounded like I
-  am saying ``CEC is a better method''. He wanted me to conclude (as
-  we have done), that it means higher risk / fatter lower tail
-\item Comment on what types of events cause the ``CEC'' better
-  outcomes [do the experiment first]
-\end{itemize}
+% Things I think can improve the paper (and make it more precise)
+% \begin{itemize}
+% \item Only compare Bellman and CEC
+% \item Emphasise that CEC is what is done in the revenue literature
+% \item Emphasise that the models we use are the ones from literature
+%   [or maybe use the GBM model]
 
-Things I think can improve the paper (and make it more precise)
-\begin{itemize}
-\item Only compare Bellman and CEC
-\item Emphasise that CEC is what is done in the revenue literature
-\item Emphasise that the models we use are the ones from literature
-  [or maybe use the GBM model]
-
-\end{itemize}
+% \end{itemize}
 
 
 \subfile{introduction}
