Use royal society template

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,7 @@
 \documentclass[main.tex]{subfiles}
 
 \begin{document}
-\abstract{
+\begin{abstract}
   In this article, we consider a retailer that wants to
   dynamically price a product affected by randomness in the demand, in order to
   maximise its profits.
@@ -25,11 +25,12 @@
   yields larger profits than an optimal, expected value maximising
   policy.
   However, this approximate algorithm performs significantly worse in
-  the remaining realisations, implying a more risk-seeking attitude by the
+  the \phantom{the} %to fix overfull hbox
+  remaining realisations, implying a more risk-seeking attitude by the
   retailer.
   % However, this approximate algorithm is less robust to model misspecification, and thus
   % requires that the retailer spends more resources on state estimation.
-}
+\end{abstract}
 \end{document}
 
 %%% Local Variables:
