--- a/introduction.tex
+++ b/introduction.tex
@@ -10,11 +10,12 @@ maximize revenues has been undertaken for centuries. In recent
 decades, data- and model-driven approaches have become increasingly
 popular in order to advise on and automate the process for companies.
 There are several success stories from early adopters, for example in
-the airline industry. American Airlines estimated in 1992 that
-the introduction of yield management software had, over the preceding
-three years, contributed \$500 million of additional revenue per year,
-and would continue to do so in the future (\citet{smith1992yield}).
-In an example from Chilean retail, \citet{bitran1998coordinating}
+the airline industry.
+American Airlines estimated in 1992 that the introduction of yield
+management software had, over the preceding three
+years, contributed \$500 million of additional revenue per year,
+and would continue to do so in the future \cite{smith1992yield}.
+In an example from Chilean retail \cite{bitran1998coordinating}, the authors
 report an expected revenue improvement of 7\%-16\% from implementing
 model-driven strategies.
 For retailers with billions of pounds in revenues, small
@@ -64,14 +65,14 @@ Finally, the dimensions of the state, policy and exogenous
 information spaces can quickly make a numerical solution to the Bellman
 equation intractable. An explosion of dimensions can happen very
 quickly, even for one-product problems. In
-\citet{bertsimas2001dynamic}, the authors model a simple
+\cite{bertsimas2001dynamic}, the authors model a simple
 one-product demand function with uncertainty in the function
 parameters, and present an eight-dimensional dynamic programming
 solution to the problem.
 Much of the focus in the research community has therefore been on
 developing tractable algorithms with comparable performance to the
 optimal policies, see for example
-\citet{powell2011approximate} or \citet{bertsekas2012dynamic}.
+\cite{powell2011approximate} or \cite{bertsekas2012dynamic}.
 One can either create explicit policy functions off-line, at the
 start of the decision process, or implicitly through an automated
 search for the best policy on-line for each decision point.
@@ -80,7 +81,7 @@ is the speed at which we can make our decisions in the
 future. In the classic pricing problems, the dynamics of the
 underlying system do not require instant pricing decisions. Thus,
 suboptimal decision rules that are created as they are needed, are often used
-instead (\citet{talluri2006theory}). Estimation of the system and optimisation of prices are
+instead \cite{talluri2006theory}. Estimation of the system and optimisation of prices are
 normally separated, and constraints are more easily updated at each
 decision point.
 
@@ -88,8 +89,8 @@ There are several proposed approximations in the
 literature, although for revenue management applications, most of the domain knowledge is kept within
 respective commercial organisations.
 Many of the suboptimal pricing algorithms are justified on practical grounds
-(\citet{aviv2012dynamic}), or
-from asymptotic results (\citet{gallego1994optimal}).
+\cite{aviv2012dynamic}, or
+from asymptotic results \cite{gallego1994optimal}.
 The aim of this article is to highlight the implications suboptimal policy
 choices have on the distribution of the relevant objective, and not
 only marginalised quantities such as the expected value.
